--- a/client/src/features/Admin/pages/Hotel/hotel.scss
+++ b/client/src/features/Admin/pages/Hotel/hotel.scss
@@ -32,7 +32,7 @@
     width: 38px;
     height: 38px;
     margin-right: 10px;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   &__payment-img:last-child {
